# oxr

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml  test.yml
oxr/: __init__.py  _base.py  _exceptions.py  _types.py  client.py  core.py  exceptions.py  responses.py
oxr/asynchronous/: client.py
oxr/asynchronous/tests/: test_client.py  test_integration.py
oxr/tests/: test_client.py  test_core.py  test_integration.py
