[tool.poetry]
name = "openexchangerates"
version = "0.1.0"
description = "Type-safe client for the openexchangerates API."
authors = ["Maxwell Muoto <maxmuoto@gmail.com>"]
license = "MIT"
readme = "README.md"
include = ["oxr/py.typed"]

[tool.poetry.dependencies]
python = "^3.8"
typing-extensions = "^4.12.2"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.364"
ruff = "^0.4.5"
pytest = "^8.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py38"
line-length = 100
lint.extend-select = ["I"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]


[tool.pyright]
include = ["keychain_access", "typings"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "src/experimental",
    "src/typestubs",
    "**/venv",
]
pythonVersion = "3.8"
typeCheckingMode = "strict"
