[project]
name = "openexchangerates"
version = "0.1.0"
description = "Type-safe client for the openexchangerates API."
authors = [{ name = "Maxwell Muoto", email = "maxmuoto@gmail.com" }]
license = "MIT"
readme = "README.md"
dependencies = ["requests>=2.32.3,<3", "typing-extensions>=4.12.2,<5"]
requires-python = ">=3.9"


[dependency-groups]
dev = [
    "pytest >=8.1.1,<9",
    "pyright ~=1.1.364",
    "ruff ~=0.4.5",
    "responses~=0.25.3",
    "aioresponses~=0.7.6",
    "pytest-asyncio~=0.23.7",
    "python-dotenv~=1.0.1",
    "ipdb~=0.13.13",
]
async = ["aiohttp~=3.9.5"]


[tool.ruff]
target-version = "py39"
line-length = 100
lint.extend-select = ["I"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]


[tool.pyright]
include = ["oxr"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "src/experimental",
    "src/typestubs",
    "**/venv",
]
pythonVersion = "3.9"
typeCheckingMode = "strict"
